# musicmath

./: .gitignore  ADVANCED_ANALYSIS_GUIDE.md  DOCKER.md  FAZ_0_Altyapi.md  FAZ_1_Veri_Toplama.md  FAZ_2_Feature_Engineering.md  FAZ_4_Matematiksel_Model.md  FAZ_5_Generatif_Muzik.md  FAZ_6_Insan_Deneyi.md  FAZ_7_Gorsellestirme.md  GENEL_PROJE_PLANI.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  RUN_ALL_SEQUENCE.md  TEST_MATHEMATICAL_PATTERNS.md  analyze_features.py  analyze_pca.py  docker-compose.yml  metadata.csv  metadata_clean.csv  pyproject.toml  run_pipeline.py  test_audio_analysis.py
backend/: .dockerignore  Dockerfile  algorithms.py  artwork.py  celery_app.py  requirements.txt  server.py  tasks.py
music_math/: __init__.py
music_math/analysis/: __init__.py  chaos_theory.py  chord_progression.py  chroma_patterns.py  game_theory.py  geometric.py  golden_ratio.py  known_patterns.py  markov_analyzer.py  multi_instrument.py  palindromic.py  pattern_miner.py  prime_harmony.py  similarity.py
music_math/audio/: __init__.py  cqt.py  features.py  synthesis.py
music_math/cli/: __init__.py
music_math/core/: __init__.py  config.py  logging.py  types.py
music_math/data/: __init__.py  (+6 more)
scripts/: __init__.py  advanced_analysis.py  aesthetic_index.py  brute_force_motif.py  brute_force_patterns.py  classification_analysis.py  download_maestro.py  download_midi_dataset.py  known_pattern_discovery.py  mathematical_patterns.py  merge_numeric_patterns_into_features.py  note_numeric_patterns.py  plot_numeric_patterns_by_era.py  signature_metrics.py  statistical_tests.py
(+40 files in other folders)
